Some small style adjustments (removed block at the bottom of every event, ui-resizable in events only on hover). Also simplified getSkinCss to get all the colors from the event object itself

--- a/src/agenda/agenda.css
+++ b/src/agenda/agenda.css
@@ -113,9 +113,6 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #fff;
-	opacity: .3;
-	filter: alpha(opacity=30);
 	}
 	
 .fc .ui-draggable-dragging .fc-event-bg, /* TODO: something nicer like .fc-opacity */
@@ -135,7 +132,12 @@
 	font-family: monospace;
 	text-align: center;
 	cursor: s-resize;
+	display: none;
 	}
+
+.fc-event-vert:hover .ui-resizable-s {
+	display: block;
+}
 	
 .fc-agenda .ui-resizable-resizing { /* TODO: better selector */
 	_overflow: hidden;
