--- a/src/common/common.css
+++ b/src/common/common.css
@@ -1,4 +1,3 @@
-
 /* Cell Styles
 ------------------------------------------------------------------------*/
 
@@ -8,7 +7,7 @@
 	}
 	
 .fc-state-highlight { /* <td> today cell */ /* TODO: add .fc-today to <th> */
-	background: #ffc;
+	background: #f2f2f2;
 	}
 	
 .fc-cell-overlay { /* semi-transparent rectangle while dragging */
