--- a/src/agenda/agenda.css
+++ b/src/agenda/agenda.css
@@ -111,7 +111,7 @@ th, td {
 ------------------------------------------------------------------------*/
 
 .fc-event-vert {
-	border-width: 0 1px;
+	border-width: 1px;
 	}
 	
 .fc-event-vert .fc-event-head,
