Also removed fake rounded corners for all day events

--- a/src/common/common.css
+++ b/src/common/common.css
@@ -204,7 +204,7 @@ a.fc-event {
 ------------------------------------------------------------------------*/
 
 .fc-event-hori {
-	border-width: 1px 0;
+	border-width: 1px;
 	margin-bottom: 1px;
 	}
 	
