--- a/src/agenda/agenda.css
+++ b/src/agenda/agenda.css
@@ -171,6 +171,6 @@ th, td {
 	margin: 0;
 	padding: 0;
 	border: none;
-	border-top: 2px solid #3ec400;
+	border-top: 2px solid #bf5a5a;
 	z-index: 999;
 }
