--- a/src/common/common.css
+++ b/src/common/common.css
@@ -180,10 +180,11 @@ a.fc-event {
 .fc-event-time,
 .fc-event-title {
 	padding: 0 1px;
+	-webkit-font-smoothing: antialiased;
 	}
 
 .fc-event-title {
-	line-height: 16px;
+	line-height: 18px;
 	}
 	
 .fc .ui-resizable-handle { /*** TODO: don't use ui-resizable anymore, change class ***/
