--- a/src/common/common.css
+++ b/src/common/common.css
@@ -167,6 +167,9 @@ a.fc-event {
 	border-color: #36c;     /* default BORDER color */
 	background-color: #36c; /* default BACKGROUND color */
 	color: #fff;            /* default TEXT color */
+	border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
 	}
 	
 .fc-event-inner {
@@ -176,6 +179,9 @@ a.fc-event {
 	border-style: solid;
 	border-width: 0px;
 	overflow: hidden;
+	border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
 	}
 	
 .fc-event-time,
