opacity of all day time selection

--- a/src/common/common.css
+++ b/src/common/common.css
@@ -16,9 +16,9 @@
 	}
 	
 .fc-cell-overlay { /* semi-transparent rectangle while dragging */
-	background: #9cf;
-	opacity: .2;
-	filter: alpha(opacity=20); /* for IE */
+	background: #36C;
+	opacity: .5;
+	filter: alpha(opacity=50); /* for IE */
 	}
 	
 
