added back the dotted line in the fullcalendar grid, so the computation of the event selection is correct.

--- a/src/agenda/agenda.css
+++ b/src/agenda/agenda.css
@@ -98,7 +98,8 @@ th, td {
 
 .fc-agenda-slots tr.fc-minor th,
 .fc-agenda-slots tr.fc-minor td {
-	border-top-style: none;
+	/* don't put this to none or hidden, the computation of the slector will be off then  */
+	border-top-style: dotted;
 	}
 	
 .fc-agenda-slots tr.fc-minor th.ui-widget-header {
