Made the css a bit less generic

--- a/src/agenda/agenda.css
+++ b/src/agenda/agenda.css
@@ -13,7 +13,7 @@ th {
 	font-size: 0.87em;
 }
 	
-th, td {
+.fc-agenda table th, .fc-agenda table td {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
